// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormBuilder /> should call onChange callback when input is changed 1`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "foo": {
          "default": "default",
          "label": "foo",
          "type": "text",
          "visible": true,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={
    [MockFunction] {
      "calls": [
        [
          {
            "foo": "default",
          },
          false,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  id="foo"
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.foo.before"
          props={null}
        />
        <Portal
          name="foo.foo"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "default": "default",
                "handleChange": [Function],
                "id": "foo",
                "label": "foo",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.foo"
            style={
              {
                "field": "",
              }
            }
            value="default"
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="foo"
              multiLine={false}
              name="foo.foo"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value="default"
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={true}
                  isFocused={false}
                  label="foo"
                  name="foo.foo"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-16msjt6 css-1fekhao label floating"
                    htmlFor="foo.foo"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="foo"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        foo
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.foo"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.foo"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value="default"
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.foo"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.foo"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value="default"
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.foo"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.foo"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="default"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.foo"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value="default"
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.foo"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.foo"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.foo.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should hide element if setVisibilty rule applies 1`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "bar": {
          "actions": [
            {
              "rules": [
                {
                  "context": "foo",
                  "data": [
                    "abc",
                  ],
                  "type": "notIn",
                },
              ],
              "type": "setVisibility",
            },
          ],
          "label": "bar",
          "type": "text",
        },
        "foo": {
          "label": "foo",
          "type": "text",
          "visible": true,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.foo.before"
          props={null}
        />
        <Portal
          name="foo.foo"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "handleChange": [Function],
                "id": "foo",
                "label": "foo",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.foo"
            style={
              {
                "field": "",
              }
            }
            value=""
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="foo"
              multiLine={false}
              name="foo.foo"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value=""
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={false}
                  isFocused={false}
                  label="foo"
                  name="foo.foo"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-1fekhao label"
                    htmlFor="foo.foo"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="foo"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        foo
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.foo"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.foo"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value=""
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.foo"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.foo"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value=""
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.foo"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.foo"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.foo"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value=""
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.foo"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.foo"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.foo.after"
          props={null}
        />
        <Portal
          name="foo.bar.before"
          props={null}
        />
        <Portal
          name="foo.bar"
          props={null}
        >
          <TextElement
            element={
              {
                "actions": [
                  {
                    "rules": [
                      {
                        "context": "foo",
                        "data": [
                          "abc",
                        ],
                        "type": "notIn",
                      },
                    ],
                    "type": "setVisibility",
                  },
                ],
                "custom": false,
                "handleChange": [Function],
                "id": "bar",
                "label": "bar",
                "type": "text",
              }
            }
            errorText=""
            name="foo.bar"
            style={
              {
                "field": "",
              }
            }
            value=""
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="bar"
              multiLine={false}
              name="foo.bar"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value=""
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={false}
                  isFocused={false}
                  label="bar"
                  name="foo.bar"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-1fekhao label"
                    htmlFor="foo.bar"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="bar"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        bar
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.bar"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.bar"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value=""
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.bar"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.bar"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value=""
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.bar"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.bar"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.bar"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.bar"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value=""
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.bar"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.bar"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.bar.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should hide element if setVisibilty rule applies 2`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "bar": {
          "actions": [
            {
              "rules": [
                {
                  "context": "foo",
                  "data": [
                    "abc",
                  ],
                  "type": "notIn",
                },
              ],
              "type": "setVisibility",
            },
          ],
          "label": "bar",
          "type": "text",
        },
        "foo": {
          "label": "foo",
          "type": "text",
          "visible": true,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.foo.before"
          props={null}
        />
        <Portal
          name="foo.foo"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "handleChange": [Function],
                "id": "foo",
                "label": "foo",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.foo"
            style={
              {
                "field": "",
              }
            }
            value="abc"
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="foo"
              multiLine={false}
              name="foo.foo"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value="abc"
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={true}
                  isFocused={false}
                  label="foo"
                  name="foo.foo"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-16msjt6 css-1fekhao label floating"
                    htmlFor="foo.foo"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="foo"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        foo
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.foo"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.foo"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value="abc"
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.foo"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.foo"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value="abc"
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.foo"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.foo"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="abc"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.foo"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value="abc"
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.foo"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.foo"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.foo.after"
          props={null}
        />
        <Portal
          name="foo.bar.before"
          props={null}
        />
        <Portal
          name="foo.bar"
          props={null}
        />
        <Portal
          name="foo.bar.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should not render invisible field 1`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "firstName": {
          "label": "foo",
          "type": "text",
          "visible": false,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.firstName.before"
          props={null}
        />
        <Portal
          name="foo.firstName"
          props={null}
        />
        <Portal
          name="foo.firstName.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should render empty form 1`] = `
<Builder
  className=""
  config={
    {
      "fields": {},
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      />
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should render two text fields 1`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "firstName": {
          "label": "foo",
          "type": "text",
          "visible": true,
        },
        "lastName": {
          "label": "bar",
          "type": "text",
          "visible": true,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.firstName.before"
          props={null}
        />
        <Portal
          name="foo.firstName"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "handleChange": [Function],
                "id": "firstName",
                "label": "foo",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.firstName"
            style={
              {
                "field": "",
              }
            }
            value=""
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="foo"
              multiLine={false}
              name="foo.firstName"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value=""
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={false}
                  isFocused={false}
                  label="foo"
                  name="foo.firstName"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-1fekhao label"
                    htmlFor="foo.firstName"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="foo"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        foo
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.firstName"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.firstName"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value=""
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.firstName"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.firstName"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value=""
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.firstName"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.firstName"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.firstName"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value=""
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.firstName"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.firstName"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.firstName.after"
          props={null}
        />
        <Portal
          name="foo.lastName.before"
          props={null}
        />
        <Portal
          name="foo.lastName"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "handleChange": [Function],
                "id": "lastName",
                "label": "bar",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.lastName"
            style={
              {
                "field": "",
              }
            }
            value=""
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="bar"
              multiLine={false}
              name="foo.lastName"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value=""
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={false}
                  isFocused={false}
                  label="bar"
                  name="foo.lastName"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-1fekhao label"
                    htmlFor="foo.lastName"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="bar"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        bar
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.lastName"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.lastName"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value=""
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.lastName"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.lastName"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value=""
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.lastName"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.lastName"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.lastName"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.lastName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value=""
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.lastName"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.lastName"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.lastName.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should reset value when rule applies 1`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "bar": {
          "actions": [
            {
              "params": {
                "type": "fixed",
                "value": "cheat",
              },
              "rules": [
                {
                  "context": "foo",
                  "data": [
                    "default",
                  ],
                  "type": "notIn",
                },
              ],
              "type": "setValue",
            },
          ],
          "default": "default",
          "label": "bar",
          "type": "text",
        },
        "foo": {
          "default": "default",
          "label": "foo",
          "type": "text",
          "visible": true,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.foo.before"
          props={null}
        />
        <Portal
          name="foo.foo"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "default": "default",
                "handleChange": [Function],
                "id": "foo",
                "label": "foo",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.foo"
            style={
              {
                "field": "",
              }
            }
            value="default"
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="foo"
              multiLine={false}
              name="foo.foo"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value="default"
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={true}
                  isFocused={false}
                  label="foo"
                  name="foo.foo"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-16msjt6 css-1fekhao label floating"
                    htmlFor="foo.foo"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="foo"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        foo
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.foo"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.foo"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value="default"
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.foo"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.foo"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value="default"
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.foo"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.foo"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="default"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.foo"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value="default"
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.foo"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.foo"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.foo.after"
          props={null}
        />
        <Portal
          name="foo.bar.before"
          props={null}
        />
        <Portal
          name="foo.bar"
          props={null}
        >
          <TextElement
            element={
              {
                "actions": [
                  {
                    "params": {
                      "type": "fixed",
                      "value": "cheat",
                    },
                    "rules": [
                      {
                        "context": "foo",
                        "data": [
                          "default",
                        ],
                        "type": "notIn",
                      },
                    ],
                    "type": "setValue",
                  },
                ],
                "custom": false,
                "default": "default",
                "handleChange": [Function],
                "id": "bar",
                "label": "bar",
                "type": "text",
              }
            }
            errorText=""
            name="foo.bar"
            style={
              {
                "field": "",
              }
            }
            value="default"
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="bar"
              multiLine={false}
              name="foo.bar"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value="default"
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={true}
                  isFocused={false}
                  label="bar"
                  name="foo.bar"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-16msjt6 css-1fekhao label floating"
                    htmlFor="foo.bar"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="bar"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        bar
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.bar"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.bar"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value="default"
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.bar"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.bar"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value="default"
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.bar"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.bar"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="default"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.bar"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.bar"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value="default"
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.bar"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.bar"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.bar.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;

exports[`<FormBuilder /> should reset value when rule applies 2`] = `
<Builder
  className=""
  config={
    {
      "fields": {
        "bar": {
          "actions": [
            {
              "params": {
                "type": "fixed",
                "value": "cheat",
              },
              "rules": [
                {
                  "context": "foo",
                  "data": [
                    "default",
                  ],
                  "type": "notIn",
                },
              ],
              "type": "setValue",
            },
          ],
          "default": "default",
          "label": "bar",
          "type": "text",
        },
        "foo": {
          "default": "default",
          "label": "foo",
          "type": "text",
          "visible": true,
        },
      },
    }
  }
  defaults={{}}
  handleUpdate={[Function]}
  name="foo"
  onSubmit={[Function]}
  validationErrors={[]}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      action="#"
      className="ui-shared__form"
      onKeyPress={[Function]}
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <Portal
          name="foo.foo.before"
          props={null}
        />
        <Portal
          name="foo.foo"
          props={null}
        >
          <TextElement
            element={
              {
                "custom": false,
                "default": "default",
                "handleChange": [Function],
                "id": "foo",
                "label": "foo",
                "type": "text",
                "visible": true,
              }
            }
            errorText=""
            name="foo.foo"
            style={
              {
                "field": "",
              }
            }
            value="abc"
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="foo"
              multiLine={false}
              name="foo.foo"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value="abc"
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={true}
                  isFocused={false}
                  label="foo"
                  name="foo.foo"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-16msjt6 css-1fekhao label floating"
                    htmlFor="foo.foo"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="foo"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        foo
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.foo"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.foo"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value="abc"
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.foo"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.foo"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value="abc"
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.foo"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.foo"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="abc"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.foo"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.foo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value="abc"
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.foo"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.foo"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.foo.after"
          props={null}
        />
        <Portal
          name="foo.bar.before"
          props={null}
        />
        <Portal
          name="foo.bar"
          props={null}
        >
          <TextElement
            element={
              {
                "actions": [
                  {
                    "params": {
                      "type": "fixed",
                      "value": "cheat",
                    },
                    "rules": [
                      {
                        "context": "foo",
                        "data": [
                          "default",
                        ],
                        "type": "notIn",
                      },
                    ],
                    "type": "setValue",
                  },
                ],
                "custom": false,
                "default": "default",
                "handleChange": [Function],
                "id": "bar",
                "label": "bar",
                "type": "text",
              }
            }
            errorText=""
            name="foo.bar"
            style={
              {
                "field": "",
              }
            }
            value="cheat"
            visible={true}
          >
            <TextField
              className=""
              disabled={false}
              errorText=""
              hintText=""
              inputComponent="input"
              isControlled={true}
              label="bar"
              multiLine={false}
              name="foo.bar"
              onChange={[Function]}
              onFocusChange={[Function]}
              onSanitize={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              showErrorText={true}
              translateErrorText={false}
              type="text"
              value="cheat"
            >
              <div
                className="css-e4z0u6 textField ui-shared__text-field"
              >
                <Hint
                  hintText=""
                  visible={false}
                >
                  <div
                    className="css-tnfb18 css-1jyyyen hint"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string=""
                      transform={null}
                    />
                  </div>
                </Hint>
                <Label
                  hasErrorMessage={false}
                  isFloating={true}
                  isFocused={false}
                  label="bar"
                  name="foo.bar"
                >
                  <label
                    aria-hidden={true}
                    className="css-xrreyh css-16msjt6 css-1fekhao label floating"
                    htmlFor="foo.bar"
                  >
                    <Translate
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="bar"
                      transform={null}
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        bar
                      </span>
                    </Translate>
                  </label>
                </Label>
                <FormElement
                  attributes={
                    {
                      "aria-describedby": null,
                      "aria-invalid": false,
                    }
                  }
                  disabled={false}
                  id="foo.bar"
                  inputComponent="input"
                  isControlled={true}
                  multiLine={false}
                  name="foo.bar"
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onValidate={[Function]}
                  password={false}
                  required={false}
                  setRef={[Function]}
                  type="text"
                  value="cheat"
                >
                  <_default
                    attributes={
                      {
                        "aria-describedby": null,
                        "aria-invalid": false,
                      }
                    }
                    className="css-keangt"
                    disabled={false}
                    id="foo.bar"
                    inputComponent="input"
                    isControlled={true}
                    multiLine={false}
                    name="foo.bar"
                    onChange={[Function]}
                    onFocusChange={[Function]}
                    onSanitize={[Function]}
                    onValidate={[Function]}
                    password={false}
                    required={false}
                    setRef={[Function]}
                    type="text"
                    validateOnBlur={true}
                    value="cheat"
                  >
                    <SimpleInput
                      attributes={
                        {
                          "aria-describedby": null,
                          "aria-invalid": false,
                        }
                      }
                      autoComplete={false}
                      autoCorrect={false}
                      className="css-keangt"
                      disabled={false}
                      id="foo.bar"
                      inputComponent="input"
                      isControlled={true}
                      maxLength=""
                      multiLine={false}
                      name="foo.bar"
                      onChange={[Function]}
                      onFocusChange={[Function]}
                      onKeyPress={[Function]}
                      onSanitize={[Function]}
                      onValidate={[Function]}
                      password={false}
                      required={false}
                      setRef={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="cheat"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid={false}
                        autoComplete="off"
                        autoCorrect="off"
                        className="css-keangt simpleInput common__simple-input"
                        disabled={false}
                        id="foo.bar"
                        inputMode={null}
                        maxLength=""
                        min={null}
                        name="foo.bar"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={null}
                        onKeyPress={[Function]}
                        pattern={null}
                        required={false}
                        step={null}
                        type="text"
                        value="cheat"
                      />
                    </SimpleInput>
                  </_default>
                </FormElement>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    aria-hidden={true}
                    className="css-ycal4l underline"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        {
                          "borderBottomColor": "var(--color-primary, #fa5400)",
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  ariaHidden={false}
                  className=""
                  elementName="foo.bar"
                  errorText=""
                  translate={false}
                  validationError={null}
                >
                  <div
                    aria-atomic="true"
                    aria-hidden={false}
                    aria-live="assertive"
                    className="css-of8bei errorText"
                    id="ariaError-foo.bar"
                  />
                </ErrorText>
              </div>
            </TextField>
          </TextElement>
        </Portal>
        <Portal
          name="foo.bar.after"
          props={null}
        />
      </div>
    </form>
  </Form>
</Builder>
`;
